加入bootstrap 測試d3js

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,21 @@ doctype html
 html
   head
     title= title
+    meta(charset="utf-8")
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    script(src="//code.jquery.com/jquery-2.1.4.min.js")
+    script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js")
+    script(src="/javascripts/basic.js")
+    //- script(src="/javascripts/main.min.js")
   body
+    i.fa.fa-eyedropper
     block content
+    section.chart
+    label
+      input(type="checkbox") 
+      |Sort values
+    
