--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,114 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to wash wash sleep
+  .container
+      .row
+        .col-lg-12
+          h1.page-header
+            | Hackathon Taiwan 作品 
+            small 請投下您神聖的票
+      .row
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+      .row
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+      .row
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+      .row
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+      .row
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
+        .col-md-3.portfolio-item
+          a(href='#')
+            img.img-responsive(src='http://placehold.it/750x450', alt='')
+          .works-info
+            | 123test
