--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,55 @@
 doctype html
-html
+html(lang='en', mode='normal')
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description', content='Xgag')
+    meta(name='author', content='exma')
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    //- Bootstrap Core CSS
+    link(rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css')
+    link(rel='stylesheet' href='/bootstrap/dist/css/bootstrap-theme.min.css')
+    //- Custom CSS 
+    link(rel='stylesheet' href='/stylesheets/style.css')
+    
+    //- jQuery
+    script(type='text/javascript' src='/jquery/dist/jquery.min.js')
+    script(type='text/javascript' src='/javascripts/lib/jquery.tmpl.min.js')
+    //- Bootstrap Core JavaScript
+    script(type='text/javascript' src='/bootstrap/dist/js/bootstrap.min.js')
+    //- Custom JS
+    script(type='text/javascript' src='/javascripts/main.min.js')
+      
+    
+    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+    // WARNING: Respond.js doesn't work if you view the page via file://
+    //[if lt IE 9]>
+      <script src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js'></script>
+      <script src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js'></script>
+      <![endif]
   body
+    nav.gag-nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      .container
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='/') Hackathon Taiwan
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+          ul.nav.navbar-nav.navbar-right
+            li(style="margin-top:9px;")
+              button.btn.btn-success.tab(href='#' data-toggle='modal' data-target='.upload-modal') 建立隊伍
     block content
+    
+    .container
+      hr
+      footer
+        .row
+          .col-lg-12
+            p Hackathon Tw &copy; 2015
+              | This Power by 
+              a(href="https://hackathon.tw/", target="_blank") Hackathon Tw
+            p Welcome to contact us hackathon.tw
