--- a/views/index.jade
+++ b/views/index.jade
@@ -7,108 +7,14 @@ block content
           h1.page-header
             | Hackathon Taiwan 作品 
             small 請投下您神聖的票
-      .row
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-      .row
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-      .row
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-      .row
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-      .row
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
-        .col-md-3.portfolio-item
-          a(href='#')
-            img.img-responsive(src='http://placehold.it/750x450', alt='')
-          .works-info
-            | 123test
+      - for (var x = 0; x < 5; x++)
+        .row
+          - for (var y = 0; y < 4; y++)
+            label.col-md-3.portfolio-item.team-box(for="slideOne"+x+y)
+              input(type="checkbox" value="None" id="slideOne"+x+y name="check")
+              label.checkbox(for="slideOne"+x+y)
+                i.glyphicon.glyphicon-thumbs-up.up
+              a(href='#')
+                img.img-responsive(src='http://placehold.it/750x450', alt='')
+              .works-info
+                | 123test
