--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
               input(type="checkbox" value="None" id="slideOne"+x+y name="check")
               label.checkbox(for="slideOne"+x+y)
                 i.glyphicon.glyphicon-thumbs-up.up
-              a(href='#')
+              a
                 img.img-responsive(src='http://placehold.it/750x450', alt='')
               .works-info
-                | 123test
+                | 洗洗睡
