--- a/views/dialog.jade
+++ b/views/dialog.jade
@@ -1,11 +1,40 @@
 .modal.fade.bs-example-modal-lg(tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true")
   .modal-dialog.modal-lg
-    .modal-content
+    form.modal-content()
       .modal-header
+        botton.close(type="button" aria-label="Close" data-dismiss="modal")
+          span(aria-hidden="true") &times;
         h4.modal-title
           | 建立隊伍
       .modal-body
+
+        .form-group.col-md-6
+          label(for="teamName") TEAM NAME
+          input#teamName.form-control(type="text" placeholder="TEAM NAME")
+        .form-group.col-md-6
+          label(for="projectName") PROJECT NAME
+          input#projectName.form-control(type="text" placeholder="PROJECT NAME")
+        .form-group.col-md-6
+          label(for="projectDetail") PROJECT DETAIL
+          input#projectDetail.form-control(type="text" placeholder="PROJECT DETAIL")
+        .form-group.col-md-6
+          label(for="github") GITHUB
+          input#github.form-control(type="text" placeholder="GITHUB")
+        .form-group.col-md-12
+          label(for="imgURL") TEAM PICTURE
+          input#imgURL(type="file")
+        .form-group.col-md-12
+          label TEAM MEMBER
+        - for( x = 1; x<=6; x++ )
+          .member
+            .form-group.col-md-4
+              input.form-control(id="id#{x}" type="text" placeholder="ID#{x}")
+            .form-group.col-md-4
+              input.form-control(id="name#{x}" type="text" placeholder="NAME#{x}")
+            .form-group.col-md-4
+              input.form-control(id="phone#{x}" type="text" placeholder="PHONE#{x}")
+        .clearfix
       .modal-footer
         button.btn.btn-default(type="button" data-dismiss="modal")
-          | Close
-        button.btn.btn-primary(type="button") Save changes
+          | 關閉
+        button.btn.btn-primary(type="submit") 建立完成
