--- a/views/dialog.jade
+++ b/views/dialog.jade
@@ -1,6 +1,6 @@
 .modal.fade.bs-example-modal-lg(tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true")
   .modal-dialog.modal-lg
-    form.modal-content()
+    form#creatTeam.modal-content(action="/api/team")
       .modal-header
         botton.close(type="button" aria-label="Close" data-dismiss="modal")
           span(aria-hidden="true") &times;
