--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html(lang='en', mode='normal')
     //- Bootstrap Core JavaScript
     script(type='text/javascript' src='/bootstrap/dist/js/bootstrap.min.js')
     //- Custom JS
-    script(type='text/javascript' src='/javascripts/main.min.js')
+    script(type='text/javascript' src='/javascripts/main.js')
       
     
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -28,31 +28,9 @@ html(lang='en', mode='normal')
       <script src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js'></script>
       <![endif]
   body
-    nav.gag-nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-      .container
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='/') Hackathon Taiwan
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav.navbar-right
-            li(style="margin-top:9px;")
-              button.btn.btn-success.tab(data-toggle="modal" data-target=".bs-example-modal-lg") 建立隊伍
-            li(style="margin-top:9px;")
-              button.btn.btn-info.tab(onclick="window.location.href='/results'") 投票結果
-            
+    include Common/header    
     block content
+    include Common/footer
     
     include dialog
-    .container
-      hr
-      footer
-        .row
-          .col-lg-12
-            p Hackathon Tw &copy; 2015
-              | This Power by 
-              a(href="https://hackathon.tw/", target="_blank") Hackathon Tw
-            p Welcome to contact us hackathon.tw
+    
