--- a/views/dialog.jade
+++ b/views/dialog.jade
@@ -1,6 +1,6 @@
 .modal.fade.bs-example-modal-lg(tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true")
   .modal-dialog.modal-lg
-    form#creatTeam.modal-content(action="/api/team")
+    form#creatTeam.modal-content(action="/api/team", method="post", enctype="multipart/form-data")
       .modal-header
         botton.close(type="button" aria-label="Close" data-dismiss="modal")
           span(aria-hidden="true") &times;
@@ -10,19 +10,19 @@
 
         .form-group.col-md-6
           label(for="teamName") TEAM NAME
-          input#teamName.form-control(type="text" placeholder="TEAM NAME")
+          input#teamName.form-control(type="text" placeholder="TEAM NAME" name="name")
         .form-group.col-md-6
           label(for="projectName") PROJECT NAME
-          input#projectName.form-control(type="text" placeholder="PROJECT NAME")
+          input#projectName.form-control(type="text" placeholder="PROJECT NAME" name="projectName")
         .form-group.col-md-6
           label(for="projectDetail") PROJECT DETAIL
-          input#projectDetail.form-control(type="text" placeholder="PROJECT DETAIL")
+          input#projectDetail.form-control(type="text" placeholder="PROJECT DETAIL" name="projectDetail")
         .form-group.col-md-6
           label(for="github") GITHUB
-          input#github.form-control(type="text" placeholder="GITHUB")
+          input#github.form-control(type="text" placeholder="GITHUB" name="github")
         .form-group.col-md-12
           label(for="imgURL") TEAM PICTURE
-          input#imgURL(type="file")
+          input#imgURL(type="file" name="imgURL")
         .form-group.col-md-12
           label TEAM MEMBER
         - for( x = 1; x<=6; x++ )
