--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,3 +106,10 @@ nav.gag-nav.navbar.navbar-inverse.navbar-fixed-top.dark-blue {
   background-color: #203349;
   border-color: #576676;
 }
+
+/*result*/
+#main{
+  width:100%;
+  height:400px;
+  margin:100px 0;
+}
