--- a/views/Common/footer.jade
+++ b/views/Common/footer.jade
@@ -4,6 +4,7 @@
     .row
       .col-lg-12
         p Hackathon Tw &copy; 2015
-          | This Power by 
+          | This Power by
           a(href="https://hackathon.tw/", target="_blank") Hackathon Tw
-        p Welcome to contact us hackathon.tw
+          br
+          | Welcome to contact us hackathon.tw
