random test data

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,7 @@ block content
             - if( data[i].imgURL )
               img.img-responsive(src= data[i].imgURL, alt='')
             - else
-              img.img-responsive(src='http://placehold.it/750x450', alt='')
+              img.img-responsive(src='https://hackathon.tw/img/study.jpg', alt='')
           .works-info
             = data[i].name
             br
