--- a/views/Common/footer.jade
+++ b/views/Common/footer.jade
@@ -6,5 +6,4 @@
         p Hackathon Tw &copy; 2015
           | This Power by
           a(href="https://hackathon.tw/", target="_blank") Hackathon Tw
-          br
-          | Welcome to contact us hackathon.tw
+          | Welcome to contact us Hackathon.Tw
