--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,12 +10,17 @@ a {
   margin-bottom: 25px;
 }
 .works-info{
-  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
   position: relative;
   margin: -55px 3px 0 2px;
   height: 52px;
   padding: 5px;
   border-radius: 0px 0px 10px 10px;
+  color: #fff;
+}
+.works-info span:first-child{
+  color: yellow;
+  font-size: 20px;
 }
 .checkbox{
   cursor: pointer;
@@ -33,6 +38,8 @@ a {
   transition: all .2s linear;
   border-radius: 10px;
   box-shadow: 0px 0 0px #f5f5f5, 0 0 1px #f5f5f5, 1px 0 0px #f5f5f5, 0 5px 21px #C3C3C3;
+  width: 255px;
+  height: 170px;
 }
 .team-box img:hover{
   transition: all 0.3s ease-in-out;
