--- a/views/Common/header.jade
+++ b/views/Common/header.jade
@@ -9,9 +9,10 @@ nav.gag-nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
       a.navbar-brand(href='/') Hackathon Taiwan
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right
-        li(style="margin-top:9px;")
-          button#submitVote.btn.btn-primary.tab(onclick="") 送出投票
-        li(style="margin-top:9px;")
-          button.btn.btn-success.tab(data-toggle="modal" data-target=".bs-example-modal-lg") 建立隊伍
-        li(style="margin-top:9px;")
-          button.btn.btn-info.tab(onclick="window.location.href='/results'") 投票結果
+        if path == '/'
+          li(style="margin-top:9px;")
+            button#submitVote.btn.btn-primary.tab(onclick="") 送出投票
+          li(style="margin-top:9px;")
+            button.btn.btn-success.tab(data-toggle="modal" data-target=".bs-example-modal-lg") 建立隊伍
+          li(style="margin-top:9px;")
+            button.btn.btn-info.tab(onclick="window.location.href='/results'") 投票結果
